--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <title></title>
   </head>
   <body>
+    <div id="root">
+        <h1>{{ message }}</h1>
+    </div>
+
     <script src="js/myscript.js" charset="utf-8"></script>
   </body>
 </html>
