--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div id="root">
         <h1>{{ message }}</h1>
+        <img :src="image" alt="">
     </div>
-
     <script src="js/myscript.js" charset="utf-8"></script>
   </body>
 </html>
